--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
 <div id="root"></div>
+<div id="tooltip-root" style="background: transparent; z-index: 9999;"></div>
 <script type="module" src="/src/main.tsx"></script>
 </body>
 </html>
