--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-<!--    TODO: Update favicon-->
-<!--    <link rel="icon" type="image/svg+xml" href="/"/>-->
+    <link rel="icon" type="image/png" href="/favicon.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Amazeing</title>
 
